--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="top-nav">
-      <div class="container">
-      <div class="top-nav__wrapper">
-        <div class="top-nav__links">
-            <nav>
-              <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Case Studies</a></li>
-                <!-- <li><a href="#">Testimonials</a></li> -->
-                <li><a href="#">Recent work</a></li>
-                <li><a href="#">Get in Touch</a></li>
-              </ul>
-            </nav>
-        </div>
-        <div class="top-nav__logos">
-          <a href="#"><img src="img/linkedin.png" alt=""></a>
-          <a href="#"><img src="img/behance.png" alt=""></a>
-          <a href="#"><img src="img/twitter.png" alt=""></a>
-        </div>
+<header class="top-nav">
+  <div class="container">
+    <div class="top-nav__wrapper">
+      <div class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="top-nav__links">
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">Recent work</a></li>
+            <li><a href="#">Get in Touch</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="top-nav__logos">
+        <a href="#"><img src="img/linkedin.png" alt=""></a>
+        <a href="#"><img src="img/behance.png" alt=""></a>
+        <a href="#"><img src="img/twitter.png" alt=""></a>
       </div>
     </div>
-  </header>
+  </div>
+</header>
+
 
     <section class="hero">
   <div class="container">
@@ -188,6 +193,7 @@
 <footer class="footer">
   <p>Made with ❤️</p>
 </footer>
+
 <script>
   document.getElementById("contact-form").addEventListener("submit", function(e) {
     e.preventDefault();
@@ -196,8 +202,8 @@
     let phone = document.getElementById("phone").value;
     let message = document.getElementById("message").value;
 
-    let telegram_bot_id = "8205870236:AAGBlRwzuGfzKQluYVeuGJW-k1iHQhbBsMM";  // вставь сюда токен
-    let chat_id = "7034649143"; // вставь сюда свой chat_id
+    let telegram_bot_id = "8205870236:AAGBlRwzuGfzKQluYVeuGJW-k1iHQhbBsMM";  
+    let chat_id = "7034649143"; 
 
     let text = `📩 Новое сообщение с сайта:
 Email: ${email}
@@ -222,6 +228,15 @@ Email: ${email}
       alert("❌ Ошибка при отправке: " + err);
     });
   });
+
+  const burger = document.querySelector('.burger');
+  const navLinks = document.querySelector('.nav-links');
+
+  burger.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+    burger.classList.toggle('open');
+  });
+
 </script> 
 </body>
 </html>
