--- a/index.html
+++ b/index.html
@@ -12,231 +12,106 @@
   <div class="container">
     <div class="top-nav__wrapper">
       <div class="burger">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span></span><span></span><span></span>
       </div>
-      <div class="top-nav__links">
-        <nav>
-          <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Case Studies</a></li>
-            <li><a href="#">Recent work</a></li>
-            <li><a href="#">Get in Touch</a></li>
-          </ul>
-        </nav>
-      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Case Studies</a></li>
+        <li><a href="#">Recent Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
       <div class="top-nav__logos">
-        <a href="#"><img src="img/linkedin.png" alt=""></a>
-        <a href="#"><img src="img/behance.png" alt=""></a>
-        <a href="#"><img src="img/twitter.png" alt=""></a>
+        <a href="#"><img src="linkedin.png" alt=""></a>
+        <a href="#"><img src="behance.png" alt=""></a>
+        <a href="#"><img src="twitter.png" alt=""></a>
       </div>
     </div>
   </div>
 </header>
 
+<section class="hero">
+  <div class="container hero-content">
+    <div class="hero-info">
+      <h1>Manas Abdrasulov</h1>
+      <p>Cheers bro. My name is Manas and I'm a Java Backend developer.</p>
+      <a href="#" class="btn-primary">Let’s get started ➜</a>
+    </div>
+    <div class="hero-image">
+      <img src="man_img.png" alt="Manas Photo" />
+    </div>
+  </div>
 
-    <section class="hero">
-  <div class="container">
-    <div class="hero-container">
-
-      <div class="hero-content">
-        <div class="hero-info">
-          <h1>Manas Abdrasulov</h1>
-          <p>Cheers bro. My name is Manas and I'm a Java Backend developer.</p>
-          <a href="#" class="btn-primary">Let’s get started ➜</a>  
-        </div>
-        <div class="hero-image">
-          <img src="img/man_img.png" alt="Your Photo" />
-        </div>
-      </div> 
-
-      <div class="hero-container__bottom">
-        <div class="clients">
-          <p>Worked with</p>
-          <div class="client-logos">
-            <div>Java Core</div>
-            <div>Spring Boot</div>
-            <div>Spring MVC</div>
-          </div>
-        </div>
-      </div>  
-
+  <div class="clients container">
+    <p>Worked with</p>
+    <div class="client-logos">
+      <div>Java Core</div>
+      <div>Spring Boot</div>
+      <div>Spring MVC</div>
     </div>
   </div>
 </section>
- 
- <!-- <section class="case-studies">
-    <div class="container">
-      <h2>Case Studies</h2>
-      <p>Solve user & business problems since last 15+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
-      <div class="study">
-        <div class="text">
-          <span class="tag orange">Fintech</span>
-          <h3>Work name here</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <a href="#" class="btn-outline">View case study ➜</a>
-        </div>
-        <div class="image">
-          <img src="img/workname1.png" alt="Project 1" />
-        </div>
-      </div>
-
-      <div class="study reverse">
-        <div class="text">
-          <span class="tag blue">Edtech</span>
-          <h3>Work name here</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <a href="#" class="btn-outline">View case study ➜</a>
-        </div>
-        <div class="image">
-          <img src="img/workname2.png" alt="Project 2" />
-        </div>
-      </div>
-      <div class="study">
-        <div class="text">
-          <span class="tag green">Pharse</span>
-          <h3>Work name here</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <a href="#" class="btn-outline green">View case study ➜</a>
-        </div>
-        <div class="image">
-          <img src="img/workname3.png" alt="Project 3" />
-        </div>
-      </div>
-
-    </div> 
-   </section> -->
-
-
-  <section class="testimonials">
+<section class="testimonials">
   <div class="container">
     <h2>Testimonials</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
+    <p>Some nice words from my friends 😎</p>
     <div class="testimonial-grid">
       <div class="testimonial-card">
-    <p>Manas sigma</p>
+        <p>Manas sigma</p>
         <div class="client-info">
-          <img src="img/uzar-hape.png" alt="Client 1">
+          <img src="uzar-hape.png" alt="Client 1">
           <span>Uzar</span>
         </div>
       </div>
-
       <div class="testimonial-card">
-    <p>Manas sigma</p>
+        <p>Bro really cooked this portfolio 🔥</p>
         <div class="client-info">
-          <img src="img/uzar-hape.png" alt="Client 1">
-          <span>Uzar</span>
-        </div>
-      </div>
-
-      <div class="testimonial-card">
-    <p>Manas sigma</p>
-        <div class="client-info">
-          <img src="img/uzar-hape.png" alt="Client 1">
-          <span>Uzar</span>
-        </div>
-      </div>
-
-      <div class="testimonial-card">
-    <p>Manas sigma</p>
-        <div class="client-info">
-          <img src="img/uzar-hape.png" alt="Client 1">
-          <span>Uzar</span>
+          <img src="uzar-hape.png" alt="Client 2">
+          <span>Uz0r0</span>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="recent-work">
   <div class="container">
     <h2>Recent Work</h2>
-    <p>Solving user & business problems since last 15+ years.<br>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
+    <p>Here’s what I’ve been working on lately.</p>
     <div class="work-grid">
       <div class="work-card">
-        <img src="img/umai.png" alt="Recent Work 1">
+        <img src="umai.png" alt="UmAI Project">
         <h3>UmAI</h3>
-        <p>UmAI - your literary world</p>
+        <p>UmAI — your literary world.</p>
         <a href="https://github.com/JGRex-Joy/umAI" class="btn-green">Know more ➜</a>
       </div>
       <div class="work-card">
-        <img src="img/recentwork2.png" alt="Recent Work 2">
+        <img src="recentwork2.png" alt="Project 2">
         <h3>Work name here</h3>
-        <p>Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+        <p>Reprehenderit in voluptate velit esse cillum dolore.</p>
         <a href="#" class="btn-green">Know more ➜</a>
       </div>
     </div>
   </div>
 </section>
+
 <section class="contact">
   <div class="container">
     <h2>Get In Touch</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    
+    <p>Let’s talk about cool Java or Spring projects!</p>
     <form id="contact-form" class="contact-form">
-      <input type="email" id="email" placeholder="Please enter your email" required>
+      <input type="email" id="email" placeholder="Enter your email" required>
       <input type="tel" id="phone" placeholder="Enter mobile" required>
       <textarea id="message" placeholder="Enter your message" rows="5" required></textarea>
-  <button type="submit">Submit ➜</button>
-</form>
-
+      <button type="submit">Submit ➜</button>
+    </form>
   </div>
 </section>
 
-
 <footer class="footer">
-  <p>Made with ❤️</p>
+  <p>Made with ❤️ by Manas</p>
 </footer>
 
-<script>
-  document.getElementById("contact-form").addEventListener("submit", function(e) {
-    e.preventDefault();
-
-    let email = document.getElementById("email").value;
-    let phone = document.getElementById("phone").value;
-    let message = document.getElementById("message").value;
-
-    let telegram_bot_id = "8205870236:AAGBlRwzuGfzKQluYVeuGJW-k1iHQhbBsMM";  
-    let chat_id = "7034649143"; 
-
-    let text = `📩 Новое сообщение с сайта:
-Email: ${email}
-Телефон: ${phone}
-Сообщение: ${message}`;
-
-    fetch(`https://api.telegram.org/bot${telegram_bot_id}/sendMessage`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        chat_id: chat_id,
-        text: text,
-        parse_mode: "HTML"
-      })
-    })
-    .then(res => res.json())
-    .then(data => {
-      alert("✅ Сообщение отправлено!");
-      document.getElementById("contact-form").reset();
-    })
-    .catch(err => {
-      alert("❌ Ошибка при отправке: " + err);
-    });
-  });
-
-  const burger = document.querySelector('.burger');
-  const navLinks = document.querySelector('.nav-links');
-
-  burger.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-    burger.classList.toggle('open');
-  });
-
-</script> 
+<script src="script.js"></script>
 </body>
 </html>
